attached_assets/Pasted--WebSocket-connection-to-wss-a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k-kirk-replit-de-1748764770811.txt
 WebSocket connection to 'wss://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/?token=vcN9gBFtQrhm' failed: 
setupWebSocket @ /@vite/client:536Understand this error
/@vite/client:536 Uncaught (in promise) SyntaxError: Failed to construct 'WebSocket': The URL 'wss://localhost:undefined/?token=vcN9gBFtQrhm' is invalid.
    at setupWebSocket (/@vite/client:536:19)
    at fallback (/@vite/client:509:16)
    at WebSocket.<anonymous> (/@vite/client:555:7)Understand this error
 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
 Chat access debug: Object
 Chat access debug: Object
 Warning: React has detected a change in the order of Hooks called by ChatRoom. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useContext                 useContext
2. useContext                 useContext
3. useSyncExternalStore       useSyncExternalStore
4. useRef                     useRef
5. useInsertionEffect         useInsertionEffect
6. useContext                 useContext
7. useContext                 useContext
8. useSyncExternalStore       useSyncExternalStore
9. useRef                     useRef
10. useInsertionEffect        useInsertionEffect
11. useContext                useContext
12. useContext                useContext
13. useContext                useContext
14. useEffect                 useEffect
15. useState                  useState
16. useCallback               useCallback
17. useSyncExternalStore      useSyncExternalStore
18. useEffect                 useEffect
19. useContext                useContext
20. useState                  useState
21. useEffect                 useEffect
22. useCallback               useCallback
23. useSyncExternalStore      useSyncExternalStore
24. useCallback               useCallback
25. useContext                useContext
26. useState                  useState
27. useEffect                 useEffect
28. useCallback               useCallback
29. useSyncExternalStore      useSyncExternalStore
30. useCallback               useCallback
31. useContext                useContext
32. useState                  useState
33. useEffect                 useEffect
34. useCallback               useCallback
35. useSyncExternalStore      useSyncExternalStore
36. useCallback               useCallback
37. useState                  useState
38. useEffect                 useEffect
39. useContext                useContext
40. useState                  useState
41. useState                  useState
42. useState                  useState
43. useState                  useState
44. useRef                    useRef
45. useState                  useState
46. useState                  useState
47. useState                  useState
48. useState                  useState
49. useState                  useState
50. useState                  useState
51. useState                  useState
52. useState                  useState
53. useContext                useContext
54. useContext                useContext
55. useContext                useContext
56. useEffect                 useEffect
57. useState                  useState
58. useCallback               useCallback
59. useSyncExternalStore      useSyncExternalStore
60. useEffect                 useEffect
61. useEffect                 useEffect
62. useContext                useContext
63. useContext                useContext
64. useContext                useContext
65. useEffect                 useEffect
66. useState                  useState
67. useCallback               useCallback
68. useSyncExternalStore      useSyncExternalStore
69. useEffect                 useEffect
70. undefined                 useContext
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    at ChatRoom (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/pages/chat-room-simple-new.tsx:65:22)
    at Route (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:323:16)
    at Switch (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:379:17)
    at Router (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/App.tsx?v=EvX7KP1fs8T8_Z8E87_5V:52:31)
    at Provider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-W6PG6DRF.js?v=8bc9a725:38:15)
    at TooltipProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js?v=8bc9a725:58:5)
    at ThemeProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/components/theme-provider.tsx:25:3)
    at QueryClientProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=8bc9a725:2805:3)
    at App
printWarning @ chunk-RPCDYKBN.js:521Understand this error
 Chat access debug: Object
chunk-RPCDYKBN.js:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js:12074:22)
    at updateEffect (chunk-RPCDYKBN.js:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js:12703:22)
    at Object.useEffect (chunk-QCHXOAYK.js:1078:29)
    at useClearResetErrorBoundary (@tanstack_react-query.js:2871:10)
    at useBaseQuery (@tanstack_react-query.js:3010:3)
    at useQuery (@tanstack_react-query.js:3068:10)
    at ChatRoom (/src/pages/chat-room-simple-new.tsx:216:57)
    at renderWithHooks (chunk-RPCDYKBN.js:11548:26)Understand this error
 Chat access debug: Object
 Chat access debug: Object
chunk-RPCDYKBN.js:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js:12074:22)
    at updateEffect (chunk-RPCDYKBN.js:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js:12703:22)
    at Object.useEffect (chunk-QCHXOAYK.js:1078:29)
    at useClearResetErrorBoundary (@tanstack_react-query.js:2871:10)
    at useBaseQuery (@tanstack_react-query.js:3010:3)
    at useQuery (@tanstack_react-query.js:3068:10)
    at ChatRoom (/src/pages/chat-room-simple-new.tsx:216:57)
    at renderWithHooks (chunk-RPCDYKBN.js:11548:26)Understand this error
 The above error occurred in the <ChatRoom> component:

    at ChatRoom (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/pages/chat-room-simple-new.tsx:65:22)
    at Route (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:323:16)
    at Switch (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:379:17)
    at Router (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/App.tsx?v=EvX7KP1fs8T8_Z8E87_5V:52:31)
    at Provider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-W6PG6DRF.js?v=8bc9a725:38:15)
    at TooltipProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js?v=8bc9a725:58:5)
    at ThemeProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/components/theme-provider.tsx:25:3)
    at QueryClientProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=8bc9a725:2805:3)
    at App

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
logCapturedError @ chunk-RPCDYKBN.js:14032Understand this error
chunk-RPCDYKBN.js:19413 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js:12074:22)
    at updateEffect (chunk-RPCDYKBN.js:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js:12703:22)
    at Object.useEffect (chunk-QCHXOAYK.js:1078:29)
    at useClearResetErrorBoundary (@tanstack_react-query.js:2871:10)
    at useBaseQuery (@tanstack_react-query.js:3010:3)
    at useQuery (@tanstack_react-query.js:3068:10)
    at ChatRoom (/src/pages/chat-room-simple-new.tsx:216:57)
    at renderWithHooks (chunk-RPCDYKBN.js:11548:26)